<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blackColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TempHumidityActivity"
    tools:showIn="@layout/activity_temp_humidity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/whiteColor"
            android:text="@string/temp_humid_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/temperatureLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/tempEditText"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/whiteColor"
                android:lines="1"
                android:digits="0123456789"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"
                android:text="@string/humidityLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/HumidityEditText"
                android:lines="1"
                android:digits="0123456789"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/set_btn"
                android:textColor="@color/whiteColor"
                android:textAllCaps="false"
                android:textSize="30dp"
                android:onClick="setTempHumid"/>
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/cancel_btn"
                android:background="@drawable/custom_button"
                android:textSize="30dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/whiteColor"
                android:onClick="cancelTempHumid"/>
        </LinearLayout>
        
    </LinearLayout>
    
</RelativeLayout>
