<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blackColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="farmiotapp.cmpe277.sdthai.farmiotapp.FarmManagerActivity"
    tools:showIn="@layout/activity_farm_manager">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/temp_humid_title"
            android:textColor="@color/whiteColor"
            android:textSize="40dp"
            android:gravity="center"
            android:background="@drawable/custom_green_textview_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_fan_cond"
                    android:textColor="@color/whiteColor"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textAllCaps="false"
                    android:layout_marginLeft="15dp"
                    android:text="@string/turn_fan_btn"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/custom_red_textview_layout"
                    android:onClick="turnFan"/>
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/whiteColor"/>
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_fan_sprinkler"
                    android:textColor="@color/whiteColor"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textAllCaps="false"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/turn_fan_sprinkler_btn"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/custom_purple_textview_layout"
                    android:onClick="turnFanSprinkler"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
